--- a/static/css/playground.css
+++ b/static/css/playground.css
@@ -1,22 +1,18 @@
 /* General */
-html {
+html,body {
     height:100%;
     width:100%;
 }
 
 body {
-    height:100%;
-    width:100%;
     overflow:auto;
-    margin:0;
-    padding:0;
     background-image:url('/static/images/temp_background.jpg');
     background-size:cover; 
 }
 
-div,img,figcaption,figure {
+div,img,figcaption,figure,body {
     margin:0;
-    padding:5px;
+    padding:0;
 }
 
 div.page {
@@ -39,6 +35,8 @@ div.container {
     display:flex;
     justify-content:center;
     align-items:center;
+    margin:5px;
+    padding:5px;
     width:100% - 5px;
     background-color:pink;
     border:purple solid 5px;
@@ -47,11 +45,11 @@ div.container {
 
 div.container-display {
     display:flex;
+    position:relative;
     justify-content:center;
     align-items:center;
     height:100% - 10px;
-    width:500px;
-    margin:10px;
+    width:70%;
 }
 
 div.center {
@@ -60,8 +58,9 @@ div.center {
 
 div.container-text {
     display:inline-block;
+    position:relative;
     height:100% - 10px;
-    width:500px;
+    width:30%;
     vertical-align:top;
     border:black solid 2px;
     border-radius:10px;
@@ -123,7 +122,7 @@ span.dot-active, span.dot:hover {
 a.prev-slide, a.next-slide {
     cursor:pointer;
     position:relative;
-    bottom:158px;
+    bottom:163px;
     width:auto;
     padding:16px;
     padding-top:140px;
@@ -137,17 +136,56 @@ a.prev-slide, a.next-slide {
 }
 
 a.prev-slide {
-    right:138px;
+    right:148px;
     border-radius:6px 0 0 6px;
 }
 
 a.next-slide {
-    left:158px;
+    left:148px;
     border-radius:0 6px 6px 0;
 }
 
 a.prev-slide:hover, a.next-slide:hover {
     background-color:rgba(48,48,48,0.8);
+}
+
+/* Item 3: Resizeable Display */
+div.enlarged-item {
+    position:relative;
+    display:inherit;
+    min-width:400px;
+    min-height:400px;
+    margin-right:5px;
+}  
+
+div.item-panel {
+    position:relative;
+    display:inherit;
+    flex-direction:column;
+}
+
+div.item-row {
+    position:relative;
+    display:inherit;
+    flex-direction:row;
+    align-content:center;
+    justify-content:center;
+    height:50%;
+    width:33%;
+    min-height:200px;
+    min-width:600px;
+}
+
+div.listed-item {
+    position:relative;
+    display:inherit;
+    min-height:200px;
+    min-width:200px;
+}
+
+img.item-img {
+    height:100%;
+    width:100%;
 }
 
 
