--- a/static/css/projects.css
+++ b/static/css/projects.css
@@ -1,4 +1,58 @@
-body {
-    margin:0;
-    padding:0;
+/* Main Section for displaying Project */
+div#projects {
+    display:flex;
+    flex-direction:column;
+    align-content:center;
+    justify-content:center;
+}
+
+/* Spotlight for one project with a summary of project details */
+div.project-display {
+    display:inherit;
+    width:80%;
+    margin-left:10%;
+    margin-right:10%;
+    margin-top:1%;
+    margin-bottom:1%;
+    min-height:100px;
+    border:solid 2px;
+}
+
+div.project-spotlight-img {
+
+}
+
+div.project-spotlight-summary {
+
+}
+
+
+
+/* Specific Project Spotlights */
+
+div.project-display#project1 {
+    border-color:aqua;
+}
+
+div.project-display#project2 {
+    border-color:violet;
+}
+
+div.project-display#project3 {
+    border-color:rebeccapurple;
+}
+
+
+/* Specific Minimised Projects */
+
+div.project-mini#project1 {
+
+}
+
+div.project-mini#project2 {
+    
+}
+
+div.project-mini#project3 {
+    
 }
