--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -2,13 +2,11 @@
 
 <div id="navbar">
     <ul>
-        <li><a href="#about"> About Me </a></li>
-        <li><a href="#skills"> Skillset </a></li>
-        <li><a href="#projects"> Projects </a></li>
-        <li><a href="#education"> Education </a></li>
-        <li><a href="#career"> Career </a></li>
+        <li><a href="/"> Home </a></li>
+        <li><a href="/experience"> Experience </a></li>
+        <li><a href="/projects"> Projects </a></li>
         <li><a href="/playground"> Playground </a></li>
-        <li><a href="#contact"> Contact Me </a></li>
+        <li><a href="/contact"> Contact </a></li>
     </ul>
 </div>
 
