--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -28,7 +28,7 @@
                             <div id="about-right-top">
                                 <h1>Hello, I'm Lewis Meakin.</h1>
                             </div>
-                            <div id="about-right-bottom">
+                            <div id="about-right-middle">
                                 <div id="about-info">
                                     <p> I am a third year Computer Science at Coventry University. I have experience in several different coding languages
                                         such as Python, C++, and JavaScript; however I do not struggle with learning new syntax and ultimately enjoy discovering
@@ -38,6 +38,9 @@
                                         prove myself a consistently useful member provided I am given adequate direction.
                                     </p>
                                 </div>
+                            </div>
+                            <div id="about-right-bottom">
+                                <!-- <img src="{{url_for('static',filename='images/linkedin.png')}}"> -->
                             </div>
                         </div>
                     </div>
