--- a/templates/experience.html
+++ b/templates/experience.html
@@ -3,7 +3,8 @@
 
     <head>
         <title> Experience </title>
-        <link rel="stylesheet" href="{{url_for('static',filename='css/homepage.css')}}">
+        <link rel="stylesheet" href="{{url_for('static',filename='css/generic.css')}}">
+        <link rel="stylesheet" href="{{url_for('static',filename='css/experience.css')}}">
     </head>
 
     <body>
@@ -12,7 +13,8 @@
             <div>
                 {% include "navbar.html" %}
             </div>
-
+        
+        </div>
             
     </body>
 
