--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -3,6 +3,7 @@
 
     <head>
         <title> Homepage </title>
+        <link rel="stylesheet" href="{{url_for('static',filename='css/generic.css')}}">
         <link rel="stylesheet" href="{{url_for('static',filename='css/homepage.css')}}">
 
     </head>
