--- a/templates/projects.html
+++ b/templates/projects.html
@@ -3,7 +3,8 @@
 
     <head>
         <title> Projects </title>
-        <link rel="stylesheet" href="{{url_for('static',filename='css/homepage.css')}}">
+        <link rel="stylesheet" href="{{url_for('static',filename='css/generic.css')}}">
+        <link rel="stylesheet" href="{{url_for('static',filename='css/projects.css')}}">
     </head>
 
     <body>
@@ -13,6 +14,47 @@
                 {% include "navbar.html" %}
             </div>
 
+            <div id="center-outside">
+
+                <div id="centre-inside">
+
+                    <div id="projects-introduction">
+
+                    </div>
+
+                    <div id="projects-board">
+
+                        <div class="project-container">
+                            a
+                        </div>
+
+                        <div class="project-container">
+                            b
+                        </div>
+
+                        <div class="project-container">
+                            c
+                        </div>
+
+                        <div class="project-container">
+                            d
+                        </div>
+
+                        <div class="project-container">
+                            e 
+                        </div>
+
+                        <div class="project-container">
+                            f
+                        </div>
+
+                    </div>
+
+                </div>
+
+            </div>
+        
+        </div>
             
     </body>
 
