--- a/static/css/contact.css
+++ b/static/css/contact.css
@@ -1,29 +1,3 @@
-* {
-    margin: 0;
-    padding: 0;
-    color: white;
-    font-size: 20px;
-}
-
-html, body {
-    min-height: 100dvh;
-    height: 100dvh;
-    width: 100dvw;
-}
-
-body {
-    overflow: auto;
-    background: lightgray;
-    background-repeat: no-repeat;
-}
-
-
-div.page {
-    background: lightgrey;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-}
-
 div#centre-outside {
     display: flex;
     justify-content: center;
@@ -37,9 +11,7 @@ div#centre-inside {
     width: 75dvw;
     min-height: 75dvh;
     height: 75dvh;
-    background: #777;
-    border: #333 solid 5px;
-    border-radius: 15dvh;
+    
 }
 
 div.contact-input {
@@ -58,15 +30,42 @@ div#info-box {
     width: 50%;
     align-content: center;
     justify-content: center;
+    border: black solid 2px;
     
+}
+
+div#info-box-align {
+    width: 50%;
+    text-align: left;
+    align-content: center;
+    justify-content: center;
+    border: black solid 2px;
 }
 
 div#input-box {
     width: 50%;
     align-content: center;
-    justify-content: center;    
+    justify-content: center; 
+    background: rgba(30,30,30,0.3);
+    border-radius: 15dvh;   
 }
 
-input#message-box {
-    height: 200px;
+input[type="text"] {
+    width: 90%;
+    color:black;
+
+    padding:3px;
+    margin-bottom:20px;
+    border-radius: 5px;
+
 }
+
+textarea#message-box {
+    height:200px;
+    width:90%;
+    color:black;
+    
+    padding:3px;
+    border-radius: 5px;
+}
+
