--- a/static/css/navbar.css
+++ b/static/css/navbar.css
@@ -2,7 +2,7 @@
 div#navbar {
     height:50px;
     text-align:center;
-    background:linear-gradient(to bottom right,#111 10%,#222 50%,#111 90%);
+    background: rgba(0,0,0,0);;
 }
 
 ul {
@@ -27,7 +27,7 @@ li a {
 }
 
 li a:hover {
-    background-color:#111;
+    background: rgba(0,0,0,0.2);
 }
 
 div#seperation {
