--- a/static/css/projects.css
+++ b/static/css/projects.css
@@ -1,58 +1,42 @@
-/* Main Section for displaying Project */
-div#projects {
-    display:flex;
-    flex-direction:column;
-    align-content:center;
-    justify-content:center;
+div#center-outside {
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    min-height: 95dvh;
 }
 
-/* Spotlight for one project with a summary of project details */
-div.project-display {
-    display:inherit;
-    width:80%;
-    margin-left:10%;
-    margin-right:10%;
-    margin-top:1%;
-    margin-bottom:1%;
-    min-height:100px;
-    border:solid 2px;
+div#center-inside {
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    text-align: center;
+    border: black solid 5px;
 }
 
-div.project-spotlight-img {
-
-}
-
-div.project-spotlight-summary {
+div#projects-introduction {
+    width: 90dvw;
+    height: 40dvh;
+    border-radius: 5px;
+    background: rgba(120,120,120,0.2);
+    margin-bottom: 4dvh;
 
 }
 
-
-
-/* Specific Project Spotlights */
-
-div.project-display#project1 {
-    border-color:aqua;
-}
-
-div.project-display#project2 {
-    border-color:violet;
-}
-
-div.project-display#project3 {
-    border-color:rebeccapurple;
-}
-
-
-/* Specific Minimised Projects */
-
-div.project-mini#project1 {
+div#projects-board {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 10px;
+    border:black;
 
 }
 
-div.project-mini#project2 {
-    
+
+div.project-container {
+    height: 400px;
+    border-radius: 5px;
+    background: rgba(120,120,120,0.3)
 }
 
-div.project-mini#project3 {
-    
+div.project_image {
+
 }
