--- a/templates/projects.html
+++ b/templates/projects.html
@@ -25,23 +25,51 @@
                     <div id="projects-board">
 
                         <div class="project-container">
-                            a
+                            
+
+                            <div class="project-image">
+                                <img src="{{url_for('static',filename='images/Project-Images/personal-website.png')}}">
+                            </div>
+
+                            <div class="project-title">
+                                Personal Website
+                            </div>
+
+                            <div class="project-description">
+                                <div class="project-description-skills"> 
+                                        These are the skills I used
+                                </div>
+
+                                <div class="project-description-blurb">
+                                    This is what the project is.
+                                </div>
+                            </div>
+
+
                         </div>
 
                         <div class="project-container">
                             b
+
+
                         </div>
 
                         <div class="project-container">
                             c
+
+
                         </div>
 
                         <div class="project-container">
                             d
+
+
                         </div>
 
                         <div class="project-container">
                             e 
+
+
                         </div>
 
                         <div class="project-container">
@@ -55,7 +83,9 @@
             </div>
         
         </div>
-            
+
+        <!-- <script src="{{url_for('static',filename='scripts/project-image-carousel.js')}}"></script>    -->
+
     </body>
 
 </html>
