--- a/static/css/generic.css
+++ b/static/css/generic.css
@@ -9,6 +9,7 @@ html, body {
     min-height: 100dvh;
     height: 100dvh;
     width: 100dvw;
+    overflow-x: hidden;
 }
 
 body {
@@ -18,12 +19,12 @@ body {
 }
 
 div.page {
-    background: radial-gradient(at 18% 99%, rgb(27, 2, 95) 0px, transparent 50%) repeat scroll 0% 0%, 
-            radial-gradient(at 97% 8%, rgb(2, 52, 106) 0px, transparent 50%) repeat scroll 0% 0%, 
-            radial-gradient(at 79% 82%, rgb(29, 4, 83) 0px, transparent 50%) repeat scroll 0% 0%,
-            radial-gradient(at 96% 10%, rgb(1, 14, 89) 0px, transparent 50%) repeat scroll 0% 0%,    
-            radial-gradient(at 42% 20%, rgb(2, 12, 124) 0px, transparent 50%) repeat scroll 0% 0%,
-            radial-gradient(at 4% 49%, rgb(72, 2, 177) 0px, transparent 50%) repeat scroll 0% 0%;
+    background: radial-gradient(at 18% 99%, rgb(18, 1, 65) 0px, transparent 50%) repeat scroll 0% 0%, 
+            radial-gradient(at 97% 8%, rgb(4, 72, 145) 0px, transparent 50%) repeat scroll 0% 0%, 
+            radial-gradient(at 79% 82%, rgb(24, 5, 66) 0px, transparent 50%) repeat scroll 0% 0%,
+            radial-gradient(at 96% 10%, rgb(1, 8, 49) 0px, transparent 50%) repeat scroll 0% 0%,    
+            radial-gradient(at 42% 20%, rgb(2, 7, 68) 0px, transparent 50%) repeat scroll 0% 0%,
+            radial-gradient(at 4% 49%, rgb(72, 3, 175) 0px, transparent 50%) repeat scroll 0% 0%;
             
     background-repeat: no-repeat;
     background-attachment: fixed;
