--- a/templates/projects.html
+++ b/templates/projects.html
@@ -3,6 +3,7 @@
 
     <head>
         <title> Projects </title>
+        <link rel="icon" href="{{url_for('static', filename='images/favicons/felix-512x512.png')}}">
         <link rel="stylesheet" href="{{url_for('static',filename='css/generic.css')}}">
         <link rel="stylesheet" href="{{url_for('static',filename='css/projects.css')}}">
     </head>
@@ -20,13 +21,20 @@
 
                     <div id="projects-introduction">
 
+                        <div id="projects-introduction-title">
+                            PROJECTS
+                        </div>
+
+                        <div id="projects-introduction-description">
+                            Come take a look at my catalogue of personal projects, which I use to boost to boost my skills.
+                        </div>
+                        
                     </div>
 
                     <div id="projects-board">
 
                         <div class="project-container">
                             
-
                             <div class="project-image">
                                 <img src="{{url_for('static',filename='images/Project-Images/personal-website.png')}}">
                             </div>
@@ -49,8 +57,23 @@
                         </div>
 
                         <div class="project-container">
-                            b
+                            <div class="project-image">
+                                <img src="{{url_for('static',filename='images/Project-Images/personal-website.png')}}">
+                            </div>
 
+                            <div class="project-title">
+                                Personal Website
+                            </div>
+
+                            <div class="project-description">
+                                <div class="project-description-skills"> 
+                                        These are the skills I used
+                                </div>
+
+                                <div class="project-description-blurb">
+                                    This is what the project is.
+                                </div>
+                            </div>
 
                         </div>
 
