--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -27,17 +27,16 @@
                     <div id="about-right">
                         <div id="about-right-inside">
                             <div id="about-right-top">
-                                <h1>Hello, I'm Lewis Meakin.</h1>
+                                Hello, I'm Lewis Meakin.
                             </div>
                             <div id="about-right-middle">
                                 <div id="about-info">
-                                    <p> I am a third year Computer Science at Coventry University. I have experience in several different coding languages
-                                        such as Python, C++, and JavaScript; however I do not struggle with learning new syntax and ultimately enjoy discovering
-                                        the quirks and niche applications that come with with different languages. I enjoy problem solving and the porcess that 
-                                        comes with designing, implementing, and optomising projects. I have applied my skills through several mediums: game design,
-                                        web development, application development, ect. While I thrive the best as an idividual I am not adverse to teamwork and can
-                                        prove myself a consistently useful member provided I am given adequate direction.
-                                    </p>
+                                    I am a third year Computer Science at Coventry University. I have experience in several different coding languages
+                                    such as Python, C++, and JavaScript; however I do not struggle with learning new syntax and ultimately enjoy discovering
+                                    the quirks and niche applications that come with with different languages. I enjoy problem solving and the porcess that 
+                                    comes with designing, implementing, and optomising projects. I have applied my skills through several mediums: game design,
+                                    web development, application development, ect. While I thrive the best as an idividual I am not adverse to teamwork and can
+                                    prove myself a consistently useful member provided I am given adequate direction.
                                 </div>
                             </div>
                             <div id="about-right-bottom">
