--- a/templates/projects.html
+++ b/templates/projects.html
@@ -43,15 +43,25 @@
                                 Personal Website
                             </div>
 
+                            
                             <div class="project-description">
-                                <div class="project-description-skills"> 
-                                        These are the skills I used
+                                <div class="project-description-blurb">
+                                    Hosted using Python Flask, this website was created from the ground up with custom HTML, CSS, and JavaScript.
                                 </div>
 
-                                <div class="project-description-blurb">
-                                    This is what the project is.
-                                </div>
+                                <div class="project-description-skills"> 
+                                    <div class="project-description-skill-tag">HTML3</div>
+                                    <div class="project-description-skill-tag">CSS5</div>
+                                    <div class="project-description-skill-tag">JavaScript</div>
+                                    <div class="project-description-skill-tag">Python</div>
+                                    <div class="project-description-skill-tag">Web Development</div>
+    
+                                </div>                    
                             </div>
+                            
+                            <a class="project-github-link" href="https://github.com/Meakinl2/Personal-Website">
+                                    GitHub 
+                            </a>
 
 
                         </div>
@@ -66,13 +76,17 @@
                             </div>
 
                             <div class="project-description">
-                                <div class="project-description-skills"> 
-                                        These are the skills I used
-                                </div>
 
                                 <div class="project-description-blurb">
                                     This is what the project is.
                                 </div>
+
+
+                                <div class="project-description-skills"> 
+                                    Skills
+                                </div>
+
+                                
                             </div>
 
                         </div>
