--- a/templates/projects.html
+++ b/templates/projects.html
@@ -26,7 +26,7 @@
                         </div>
 
                         <div id="projects-introduction-description">
-                            Come take a look at my catalogue of personal projects, which I use to boost to boost my skills.
+                            Come take a look at the catalogue of projects I've worked on. They show a cumulation of my interests and efforts that have built the skills I have today.
                         </div>
                         
                     </div>
@@ -55,20 +55,19 @@
                                     <div class="project-description-skill-tag">JavaScript</div>
                                     <div class="project-description-skill-tag">Python</div>
                                     <div class="project-description-skill-tag">Web Development</div>
-    
                                 </div>                    
                             </div>
                             
                             <a class="project-github-link" href="https://github.com/Meakinl2/Personal-Website">
                                     GitHub 
                             </a>
-
-
                         </div>
+
+
 
                         <div class="project-container">
                             <div class="project-image">
-                                <img src="{{url_for('static',filename='images/Project-Images/personal-website.png')}}">
+                                <img src="{{url_for('static',filename='images/Project-Images/pokemon_data_analysis.png')}}">
                             </div>
 
                             <div class="project-title">
@@ -83,13 +82,21 @@
 
 
                                 <div class="project-description-skills"> 
-                                    Skills
+                                    <div class="project-description-skill-tag">Python</div>
+                                    <div class="project-description-skill-tag">Jupyter</div>
+                                    <div class="project-description-skill-tag">Data Analysis</div>
+                                    <div class="project-description-skill-tag">Data Visualisation</div>
+                                    <div class="project-description-skill-tag">Data Modelling</div>
                                 </div>
-
-                                
                             </div>
 
+                            <a class="project-github-link" href="https://github.com/Meakinl2/Pokemon-Data-Analysis">
+                                    GitHub 
+                            </a>
+
                         </div>
+
+
 
                         <div class="project-container">
                             c
@@ -97,17 +104,23 @@
 
                         </div>
 
+
+
                         <div class="project-container">
                             d
 
 
                         </div>
 
+
+
                         <div class="project-container">
                             e 
 
 
                         </div>
+
+                    
 
                         <div class="project-container">
                             f
