--- a/templates/projects.html
+++ b/templates/projects.html
@@ -42,21 +42,18 @@
                             <div class="project-title">
                                 Personal Website
                             </div>
-
                             
                             <div class="project-description">
-                                <div class="project-description-blurb">
-                                    Hosted using Python Flask, this website was created from the ground up with custom HTML, CSS, and JavaScript.
-                                </div>
-
-                                <div class="project-description-skills"> 
-                                    <div class="project-description-skill-tag">HTML3</div>
-                                    <div class="project-description-skill-tag">CSS5</div>
-                                    <div class="project-description-skill-tag">JavaScript</div>
-                                    <div class="project-description-skill-tag">Python</div>
-                                    <div class="project-description-skill-tag">Web Development</div>
-                                </div>                    
+                                Hosted using Python Flask, this website was created from the ground up with custom HTML, CSS, and JavaScript.
                             </div>
+
+                            <div class="project-skills"> 
+                                <div class="project-skill-tag">HTML3</div>
+                                <div class="project-skill-tag">CSS5</div>
+                                <div class="project-skill-tag">JavaScript</div>
+                                <div class="project-skill-tag">Python</div>
+                                <div class="project-skill-tag">Web Development</div>
+                            </div>                    
                             
                             <a class="project-github-link" href="https://github.com/Meakinl2/Personal-Website">
                                     GitHub 
@@ -71,24 +68,24 @@
                             </div>
 
                             <div class="project-title">
-                                Personal Website
+                                Pokemon Data Analysis 
                             </div>
+
+                            
 
                             <div class="project-description">
-
-                                <div class="project-description-blurb">
-                                    This is what the project is.
-                                </div>
-
-
-                                <div class="project-description-skills"> 
-                                    <div class="project-description-skill-tag">Python</div>
-                                    <div class="project-description-skill-tag">Jupyter</div>
-                                    <div class="project-description-skill-tag">Data Analysis</div>
-                                    <div class="project-description-skill-tag">Data Visualisation</div>
-                                    <div class="project-description-skill-tag">Data Modelling</div>
-                                </div>
+                                Kickstarted by a Kaggle Dataset, this project focuses on using various Python Libraries alongside Jupyter Notebook to Analyse, Visualise and Model various attriubutes of the first 807 Pokemon.
                             </div>
+
+
+                            <div class="project-skills"> 
+                                <div class="project-skill-tag">Python</div>
+                                <div class="project-skill-tag">Jupyter</div>
+                                <div class="project-skill-tag">Data Analysis</div>
+                                <div class="project-skill-tag">Data Visualisation</div>
+                                <div class="project-skill-tag">Data Modelling</div>
+                            </div>
+                            
 
                             <a class="project-github-link" href="https://github.com/Meakinl2/Pokemon-Data-Analysis">
                                     GitHub 
